--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Nebu Website">
+  <meta name="apple-mobile-web-app-title" content="nebu_main_website-master">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -35,7 +35,7 @@
           src="/assets/packages/flutter_inappwebview/assets/web/web_support.js" defer></script>
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2372832892";
+    const serviceWorkerVersion = "641531778";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
